--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 
 <body>
   <header>
-    <nav>
+    <nav id='nav-head'>
       <h1 aria-label="Restaurant Reviews Webpage"><a href="/">Restaurant Reviews</a></h1>
     </nav>
   </header>
